# mugc-agc

./: Cargo.toml  README.md  dfx.json  init.sh  package-lock.json  package.json
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/mugc_agc_backend/: all.html  fn.get_candid_pointer.html  index.html  sidebar-items.js  struct.State.html
doc/search.desc/mugc_agc_backend/: mugc_agc_backend-desc-0-.js
doc/src/mugc_agc_backend/: lib.rs.html  load_workflow.rs.html  mixcomfy_service.rs.html  mixcomfy_types.rs.html
doc/trait.impl/candid/types/: trait.CandidType.js
doc/trait.impl/core/clone/: trait.Clone.js
doc/trait.impl/core/default/: trait.Default.js
doc/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/trait.impl/serde/de/: trait.Deserialize.js
src/mugc-agc-backend/: Cargo.toml  mugc-agc-backend.did
src/mugc-agc-backend/scripit/: install.sh  prompts.txt  univoice-lable.json
src/mugc-agc-backend/src/: lib.rs  load_workflow.rs  mixcomfy_service.rs  mixcomfy_types.rs  type.rs  types.rs  voice_oss_service.rs  voice_oss_type.rs  workflow_types.rs
src/mugc-agc-frontend/: index.html  package.json  tsconfig.json  vite.config.js
src/mugc-agc-frontend/public/: 未命名绘图.drawio
src/mugc-agc-frontend/src/: App.jsx  main.tsx
src/mugc-agc-frontend/src/components/: topbar.tsx
src/mugc-agc-frontend/src/layout/: subpage.tsx
src/mugc-agc-frontend/src/pages/: Developer.jsx  developer.jsx  developer.module.scss  developer.tsx  home.tsx
workflow/: tmp_univoice-wk-local.json  univoice-wk-local.json
(+5 files in other folders)
